Increased tooltip z-index and prevented pointer events on it.

--- a/css/viewport-dimensions.css
+++ b/css/viewport-dimensions.css
@@ -1,12 +1,13 @@
 .px-viewport-dimensions {
   position: fixed;
-  z-index: 10000;
+  z-index: 10000000;
   padding: 5px 6px 5px;
   font-family: 'Courier', 'Courier New', 'Helvetica', sans-serif;
   font-size: 14px;
   line-height: 14px;
   word-spacing: -2px;
   color: #ffffff;
+  pointer-events: none;
   opacity: 0;
   display: inline-block;
   background: #181818;
